Improved PluginUpdater for snapshot multiple versions